terraform/alb.tf
resource "aws_lb" "main" {
  name               = "devops-production-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb.id
  ]

  subnets = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id
  ]

  tags = {
    Name = "devops-production-alb"
  }
}
